--- a/package.json
+++ b/package.json
@@ -9,23 +9,29 @@
     "postinstall": "fumadocs-mdx"
   },
   "dependencies": {
+    "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
+    "@tabler/icons-react": "^3.30.0",
+    "fumadocs-core": "15.0.2",
+    "fumadocs-mdx": "11.4.1",
+    "fumadocs-ui": "15.0.2",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "fumadocs-ui": "15.0.2",
-    "fumadocs-core": "15.0.2",
-    "fumadocs-mdx": "11.4.1"
+    "react-syntax-highlighter": "^15.6.1"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.4",
+    "@types/mdx": "^2.0.13",
     "@types/node": "22.13.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
-    "typescript": "^5.7.3",
-    "@types/mdx": "^2.0.13",
-    "@tailwindcss/postcss": "^4.0.3",
-    "tailwindcss": "^4.0.3",
-    "postcss": "^8.5.1",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^8",
-    "eslint-config-next": "15.1.6"
+    "eslint-config-next": "15.1.6",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^4.0.4",
+    "typescript": "^5.7.3"
   }
 }
