--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "fumadocs-mdx": "11.4.1",
     "fumadocs-ui": "15.0.2",
     "next": "15.1.6",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-syntax-highlighter": "^15.6.1"
